# goit-pyweb-hw-14

./: .env.example  docker-compose.yml  main.py  pyproject.toml  readme.md  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 3deb1457549b_init.py  85d5c115c5cf_init.py  952ce1916044_init.py  e8044105c673_init.py
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16390  16393  16395  16400  16402  16403  16408  16409  16411  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  (+1 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/config/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: verification_email.html
tests/: conftest.py  test_routes_auth.py  test_unit-repository_users.py  test_unit_repository_contacts.py
